--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.20.0",
     "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8"
@@ -30,9 +32,11 @@
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
+    "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
