--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.6",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
@@ -21,7 +23,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.20.0",
     "tailwind-merge": "^2.4.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
