--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.20.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.6"
