--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,7 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.20.0",
-    "swiper": "^11.2.10",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.6"
@@ -31,6 +31,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/swiper": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
