--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.2.6",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.5.2",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^6.20.0",
     "swiper": "^12.0.3",
     "tailwind-merge": "^2.4.0",
